[YMCA-1492] [YMCA-1496] Adjustments on introduction tab.

--- a/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
@@ -66,9 +66,13 @@
     display: block;
 
     @include breakpoint($tablet) {
-      @include rem(min-width, 280px);
+      @include rem(min-width, 215px);
       max-width: 100%;
       float: right;
+    }
+
+    @include breakpoint($desktop-small) {
+      @include rem(min-width, 280px);
     }
   }
 
