--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
@@ -23,7 +23,7 @@
     <div class="content-wrapper">
       <div class="compain-info-block">
         <div class="content">
-          <div class="content-text" style="min-height: 200px;">
+          <div class="content-text">
             <h3>1. {{ 'Visit the Y'|t }}</h3>
             <p>
               {{ 'Once you\'re registered, come to the Y during the challenge.'|t }}
@@ -38,7 +38,7 @@
 
       <div class="compain-info-block">
         <div class="content">
-          <div class="content-text" style="min-height: 200px;">
+          <div class="content-text">
             <h3>2. {{ 'Track progress'|t }}</h3>
             <p>
               {{ 'Each visit is one step closer to meeting your goal &mdash; and getting 4 guest passes.'|t }}
@@ -53,7 +53,7 @@
 
       <div class="compain-info-block">
         <div class="content">
-          <div class="content-text" style="min-height: 200px;">
+          <div class="content-text">
             <h3>3. {{ 'Check out daily tips'|t }}</h3>
             <p>
               {{ 'Come back to the site daily, March 8-21 for inspiration to integrate wellness in your life. For each tip that you check out, you’ll be entered in a drawing for Y Bucks.'|t }}
