--- a/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
+++ b/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
@@ -1,5 +1,5 @@
 <div class="calc-summary">
-  <div class="row">
+  <div class="row row-eq-height">
     <div class="col-md-6 col-sm-12 selected-branch calc-summary-col">
       <h2>{{ 'Your selected branch'|t }}</h2>
       <div class="selected-branch-map">{{ map }}</div>
