--- a/prototypes/scss/paragraphs/featured_stories.scss
+++ b/prototypes/scss/paragraphs/featured_stories.scss
@@ -35,7 +35,7 @@
     display: inline-block;
 
     @media (max-width: 768px) {
-      padding: 10px;
+      padding: 0;
       margin: 0 auto;
       display: block;
     }
