[YGH-276] add Icon displaying logic and theming for 2,3 colums

--- a/field--paragraph--2c.html.twig
+++ b/field--paragraph--2c.html.twig
@@ -55,7 +55,16 @@
     </div>
   {% else %}
     {% for item in items %}
-      <div{{ attributes.addClass(classes) }}>{{ item.content }}</div>
+      <div{{ attributes.addClass(classes) }}>
+        {% if item.content.field_icon_class.0 %}
+          <i class="fa fa-{{ item.content.field_icon_class.0 }}"></i>
+          <h4 {% if item.content.field_icon_class.0 %}class="with-icon"{% endif %}>{{ item.content.field_sb_title|render|striptags }}</h4>
+        {% elseif item.content.field_icon.0 %}
+          {{ item.content.field_icon }}
+          <h4 {% if item.content.field_icon.0 %}class="with-icon"{% endif %}>{{ item.content.field_sb_title|render|striptags }}</h4>
+        {% endif %}
+        {{ item.content|without('field_icon', 'field_icon_class', 'field_sb_title') }}
+      </div>
     {% endfor %}
   {% endif %}
 {% else %}
