--- a/prototypes/scss/base/mixins.scss
+++ b/prototypes/scss/base/mixins.scss
@@ -160,3 +160,23 @@
     text-decoration: none;
   }
 }
+
+@mixin read-more-link() {
+  a {
+    font-size: 15px;
+    color: $color-blue;
+    display: inline-block;
+    vertical-align: top;
+    line-height: lh(20.1, 15);
+    position: relative;
+
+    &:after {
+      content: '>';
+      display: inline-block;
+      vertical-align: text-top;
+      font-size: inherit;
+      line-height: inherit;
+      padding: 0 0 0 2px;
+    }
+  }
+}
