--- a/screen.scss
+++ b/screen.scss
@@ -31,6 +31,7 @@
 @import "./paragraphs/columns";
 @import "./paragraphs/lto";
 @import "./paragraphs/amenities";
+@import "./paragraphs/testimonials";
 
 @import "./modules/gallery";
 @import "./modules/membership";
