--- a/templates/field/field--paragraph--4c.html.twig
+++ b/templates/field/field--paragraph--4c.html.twig
@@ -70,7 +70,16 @@
       </div>
     {% else %}
       {% for item in items %}
-        <div{{ attributes.addClass(classes) }}>{{ item.content }}</div>
+        <div{{ attributes.addClass(classes) }}>
+          {% if item.content.field_icon_class.0 %}
+            <div class="fa-icon">
+              <i class="fa fa-{{ item.content.field_icon_class.0 }}"></i>
+            </div>
+          {% else %}
+            {{ item.content.field_icon }}
+          {% endif %}
+          {{ item.content|without('field_icon', 'field_icon_class') }}
+        </div>
       {% endfor %}
     {% endif %}
   {% else %}
