[YMCA-1510] Sign Up section should be centered on the page

--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -143,6 +143,7 @@ html, body {
 .theme-ymca--2017-compain-register #main {
   height: 100%;
   background: none;
+  margin-top: auto;
 }
 .theme-ymca--2017-compain-register .compain-register {
   padding: 20px;
