[YGH-334] update styles and look

--- a/node/node--listing-teaser.html.twig
+++ b/node/node--listing-teaser.html.twig
@@ -29,9 +29,7 @@
     <div{{ content_attributes.addClass('node__content') }}>
       {{ content|without('field_blog_image') }}
     </div>
-    <div class="read-more"><a href="{{ url }}">{{ 'Read more'|t }}</a></div>
   </div>
-
-  <div class="btn btn-default browse-classes-btn">{{ 'Browse classes'|t }}</div>
+  <div class="btn btn-default browse-classes-btn"><a href="{{ url }}">{{ 'Read more'|t }}</a></div>
 
 </article>
