--- a/themes/openy_themes/openy_rose/templates/page/page--node--camp.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page--node--camp.html.twig
@@ -5,8 +5,8 @@
   {% if camp_section_logo %}
     {% set camp_section_image = file_url(camp_section_logo) %}
     {% if camp_section_image is not empty %}
-      <a href="{{ base }}" title="Home" rel="home">
-        <img src="{{ camp_section_image }}" alt="Home">
+      <a href="{{ base }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
+        <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
       </a>
     {% else %}
       {# Conditions not met use parent block. #}
@@ -23,8 +23,8 @@
   {% if camp_section_logo %}
     {% set camp_section_image = file_url(camp_section_logo) %}
     {% if camp_section_image is not empty %}
-      <a href="/" title="Home" rel="home">
-        <img src="{{ camp_section_image }}" alt="Home">
+      <a href="{{ base }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
+        <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
       </a>
     {% else %}
       {# Conditions not met use parent block. #}
