--- a/themes/openy_themes/openy_rose/templates/page/page--node--camp.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page--node--camp.html.twig
@@ -5,7 +5,7 @@
   {% if camp_section_logo %}
     {% set camp_section_image = file_url(camp_section_logo) %}
     {% if camp_section_image is not empty %}
-      <a href="{{ base }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
+      <a href="{{ front_page }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
         <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
       </a>
     {% else %}
@@ -23,7 +23,7 @@
   {% if camp_section_logo %}
     {% set camp_section_image = file_url(camp_section_logo) %}
     {% if camp_section_image is not empty %}
-      <a href="{{ base }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
+      <a href="{{ front_page }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
         <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
       </a>
     {% else %}
@@ -41,7 +41,7 @@
   {% if camp_footer_logo %}
     {% set camp_footer_background_image = " style='background-image: url(" ~ file_url(camp_footer_logo) ~ ")'" %}
     {% if camp_footer_background_image is not empty %}
-      <a href="{{ base }}" class="footer__brand brand" title="{{ "YMCA"|t }}"{{ camp_footer_background_image|raw }}></a>
+      <a href="{{ front_page }}" class="footer__brand brand" title="{{ "YMCA"|t }}"{{ camp_footer_background_image|raw }}></a>
     {% else %}
       {# Conditions not met use parent block. #}
       {{ parent() }}
