--- a/themes/openy_themes/openy_rose/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page.html.twig
@@ -161,7 +161,7 @@
             {% if footer_logo %}
               {% set background_image = " style='background-image: url(" ~ file_url(footer_logo) ~ ")'" %}
             {% endif %}
-            <a href="{{ base }}" class="footer__brand brand" title="{{ "YMCA"|t }}"{{ background_image|raw }}></a>
+            <a href="{{ front_page }}" class="footer__brand brand" title="{{ "YMCA"|t }}"{{ background_image|raw }}></a>
           {% endblock %}
         </div>
         <nav class="col-xs-8 col-sm-12 col-md-7 col-lg-6">
