--- a/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
+++ b/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
@@ -16,7 +16,7 @@
         </div>
       {% else %}
         <div class="price">
-          <p>{{ 'Selected branch doesn\'t provide needed membership type of it wasn\'t configured yet. Please select other membership type or branch.'|t }}</p>
+          <p>{{ 'Selected branch doesn\'t provide needed membership type or it wasn\'t configured yet. Please select other membership type or branch.'|t }}</p>
           <p>{{ 'Call to the branch to get additional details.'|t }}</p>
         </div>
       {% endif %}
