[YMCA-1512] Fixing team page style.

--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -270,7 +270,7 @@ html, body {
     width: 100%;
   }
 }
-.compain-header .content {
+.compain-header--content .container .content {
   font-family: "Cachet",Arial,sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
@@ -284,7 +284,7 @@ html, body {
   text-transform: uppercase;
 }
 @media (min-width: 48em) {
-  .compain-header .content {
+  .compain-header--content .container .content {
     font-size: 50px;
     font-size: 5rem;
     line-height: 54px;
@@ -296,11 +296,11 @@ html, body {
     vertical-align: top;
   }
 }
-.compain-header .content .date {
+.compain-header--content .container .content .date {
   color: #20bdbe;
 }
 @media (min-width: 48em) {
-  .compain-header .content .date {
+  .compain-header--content .container .content .date {
     font-size: 36px;
     font-size: 3.6rem;
   }
