--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -370,7 +370,7 @@ html, body {
     line-height: 6.2rem;
     margin: 0 0 0 16px;
     margin: 0 0 0 1.6rem;
-    opacity: initial;
+    opacity: 1;
   }
 }
 .compain-top-nav .link-back:before {
@@ -541,9 +541,9 @@ html, body {
   .compain-user-menu .link--email {
     line-height: 62px;
     line-height: 6.2rem;
-    top: initial;
+    top: auto;
     float: right;
-    clear: initial;
+    clear: none;
     margin: 0;
     margin-left: 48px;
     margin-left: 4.8rem;
