[YMCA-1497] add bonus button on todays insight tab

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -9,4 +9,9 @@
      data-ng-show="retentionC.storage.member">
   <div data-ng-bind-html="getArticle()"> </div>
 
+  <div class="content-item">
+    <a class="btn btn-lg btn-primary compain-green" data-toggle="modal" data-target="#bonus-modal" href="#"
+       ng-click="todayInC.addBonus()">click to redeem bonus</a>
+  </div>
+
 </div>
