[YMCA-1518] Updating footer links

--- a/docroot/modules/custom/ymca_retention/templates/pages/page--challenge.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/pages/page--challenge.html.twig
@@ -87,13 +87,7 @@
 
         <div class="compain-footer--left">
           <nav class="compain-footer--navigation">
-            <ul class="menu">
-              <li><a href="#">Our Cause</a></li>
-              <li><a href="#">Give</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
+            {{ page.footer_menu }}
           </nav>
           <div class="compain-footer--copyright">
             <p><strong>&copy; 2017 YMCA Twin Cities</strong></p>
