[YMCA-1518] social links update

--- a/docroot/modules/custom/ymca_retention/templates/pages/page--challenge.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/pages/page--challenge.html.twig
@@ -77,10 +77,10 @@
         <div class="compain-footer--right">
           <div class="compain-footer--social">
             <ul class="lists-social">
-              <li class="item-social--facebook"><a href="#">facebook</a></li>
-              <li class="item-social--twitter"><a href="#">twitter</a></li>
-              <li class="item-social--youtube"><a href="#">youtube</a></li>
-              <li class="item-social--flickr"><a href="#">flickr</a></li>
+              <li class="item-social--facebook"><a href="http://www.facebook.com/YMCATwinCities" target="_blank">facebook</a></li>
+              <li class="item-social--twitter"><a href="http://twitter.com/ymcatwincities" target="_blank">twitter</a></li>
+              <li class="item-social--youtube"><a href="https://www.youtube.com/user/YMCATwinCities" target="_blank">youtube</a></li>
+              <li class="item-social--flickr"><a href="http://www.flickr.com/photos/ymcatwincities" target="_blank">flickr</a></li>
             </ul>
           </div>
         </div>
