[YMCA-1523] Days left popup theming.

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
@@ -13,7 +13,7 @@
 
     <li class="ng-hide"
         data-ng-show="!retentionC.storage.campaign.started">
-      <a href="#tab_2" class="campaign-not-started" data-toggle="modal" data-target="#ymca-retention-modal" data-type="tabs-lock">
+      <a href="#tab_2" class="campaign-not-started" data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">
         {{ 'Enter prize drawing'|t }}
       </a>
     </li>
@@ -32,7 +32,7 @@
 
     <li class="ng-hide"
         data-ng-show="!retentionC.storage.campaign.started">
-      <a href="#tab_3" class="campaign-not-started" data-toggle="modal" data-target="#ymca-retention-modal" data-type="tabs-lock">
+      <a href="#tab_3" class="campaign-not-started" data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">
         {{ 'Goals & progress'|t }}
       </a>
     </li>
@@ -51,7 +51,7 @@
 
     <li class="ng-hide"
         data-ng-show="!retentionC.storage.campaign.started">
-      <a href="#tab_4" class="campaign-not-started" data-toggle="modal" data-target="#ymca-retention-modal" data-type="tabs-lock">
+      <a href="#tab_4" class="campaign-not-started" data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">
         {{ 'Winners'|t }}
       </a>
     </li>
