--- a/docroot/themes/custom/ymca/sass/ysr_2017/_header.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_header.scss
@@ -115,7 +115,7 @@
       float: left;
       top: 0;
       left: 0;
-      background: $green10;
+      background: $green-dark;
     }
 
     img {
