--- a/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
@@ -996,7 +996,7 @@
       font-family: inherit;
       font-size: inherit;
       line-height: inherit;
-      color: $green-medium;
+      color: $green-dark;
     }
   }
 
