[YMCA-1519] added “on your Membership Card” to the explanation on where to find Member ID; hid the links in the blocks 2 and 3 on the Introduction tab

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-user-menu.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-user-menu.html.twig
@@ -25,7 +25,7 @@
       <div class="compain-facility-access-hint-wrapper collapse">
         <div class="compain-facility-access-hint">
           <p>
-            {{ 'Please find your member ID below the barcode.'|t }}
+            {{ 'Please find your member ID below the barcode on your Membership Card.'|t }}
           </p>
           <p class="small">
             {{ 'Please note it might be on the front of the card on older membership cards.'|t }}
