--- a/docroot/modules/custom/ymca_retention/templates/ymca-retention-registration-form.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/ymca-retention-registration-form.html.twig
@@ -44,7 +44,7 @@
         </div>
 
         <div class="access-answer">
-          <p>{{ "Please find your member ID below the barcode."|t }}</p>
+          <p>{{ "Please find your member ID below the barcode on your Membership Card."|t }}</p>
           <p class="note">
             {{ "(please note it might be on the front of the card on older membership cards)"|t }}
           </p>
