[OYPD-267] [OYPD-318] Membership Calculator MVP - backend (#183)
* Calc summary - hide submit button if membership for selected location without link

* Calc summary - change message for membership without price

* Calc summary - move branch title to left side

* Fix typo

* Revert: Calc summary - move branch title to left side

* Calc Summary: Fix redirect for wrong internal link

* Remove location field validation on prev button submit

--- a/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
+++ b/themes/openy_themes/openy_rose/templates/custom/openy-calc-form-summary.html.twig
@@ -16,7 +16,8 @@
         </div>
       {% else %}
         <div class="price">
-          {{ 'Unfortunately, selected branch doesn`t provide needed membership type. Please select other membership type or branch.'|t }}
+          <p>{{ 'Selected branch doesn\'t provide needed membership type or it wasn\'t configured yet. Please select other membership type or branch.'|t }}</p>
+          <p>{{ 'Call to the branch to get additional details.'|t }}</p>
         </div>
       {% endif %}
     </div>
