[YMCA-1493] fix bug with onclick function; show goal and progress tab if campaign not started yet; go to introduction tub after logout

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
@@ -31,19 +31,13 @@
     </li>
 
     <li class="ng-hide"
-        data-ng-show="!retentionC.storage.campaign.started">
-      <a href="#tab_3" class="campaign-not-started" data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">
-        {{ 'Goals & progress'|t }}
-      </a>
-    </li>
-    <li class="ng-hide"
-        data-ng-show="retentionC.storage.campaign.started && retentionC.storage.member_loaded && retentionC.storage.member">
+        data-ng-show="retentionC.storage.member">
       <a href="#tab_3" data-toggle="tab">
         {{ 'Goals & progress'|t }}
       </a>
     </li>
     <li class="ng-hide"
-        data-ng-show="retentionC.storage.campaign.started && retentionC.storage.member_loaded && !retentionC.storage.member">
+        data-ng-show="!retentionC.storage.member">
       <a href="#tab_3" class="login-required" data-toggle="modal" data-target="#ymca-retention-modal" data-type="login">
         {{ 'Goals & progress'|t }}
       </a>
