--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-user-menu.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-user-menu.html.twig
@@ -10,7 +10,7 @@
     <a class="link--email" href="#"
        data-toggle="modal" data-target="#ymca-retention-modal" data-type="email">{{ 'Change email'|t }}</a>
   </div>
-  <a class="link--log-out ng-hide" href="#"
+  <a class="nav-tabs__logout link--log-out ng-hide" href="#"
      data-ng-show="retentionC.storage.member"
      data-ng-click="retentionC.storage.memberCookieRemove()">{{ 'Sign Out'|t }}</a>
   <a class="link--register ng-hide" href="#"
