Color adjustments for camp customizations

--- a/themes/openy_themes/openy_rose/css/colors.css
+++ b/themes/openy_themes/openy_rose/css/colors.css
@@ -36,3 +36,10 @@ a,
 .footer {
   background-color: #4f4f4f;
 }
+.is-camp .branch-header .desktop {
+  background-color: #c6168d;
+  color: #fff;
+}
+.is-camp .branch-header .desktop a {
+  color: #fff;
+}
