--- a/themes/openy_themes/openy_rose/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page.html.twig
@@ -142,7 +142,7 @@
     <main role="main">
       <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
-      <div class="layout-content">
+      <div class="layout-content {{ camp_class }}">
         {% block pagecontent %}
           {{ page.content }}
         {% endblock %}
