[YMCA-1529] pr update

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
@@ -1,13 +1,13 @@
 {#
 /**
  * @file
- * Display retention campaign intro information.
+ * Display retention campaign winners information.
  */
 #}
 {#
 /**
  * @file
- * Display retention campaign introduction information.
+ * Display retention campaign winners information.
  */
 #}
 <div class="inner-container" id="instant-win">
